# open-agent-traces

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPER_PLAN.md  README.md  WORK_PLAN_V4.md  WORK_PLAN_V5.md  agento_tracing.py  dev_plan_updated.md  fix-list.md  module1-opentelemetry-gm-1156.py  module1.py  module2.py  module3.py  module4.py  module5.py  module6.py  pyproject.toml  requirements.txt  test-traces.json  workplan.md
.claude/: settings.json
CODEX_VERSIONS/: verson_1.patch  verson_2.patch
data/: module1_output.json
docs/: collector_setup.md  tracing_migration.md
logs/: manual_traces.json  otel_traces_2025-06-29_00-23-24.json  otel_traces_2025-06-29_00-23-24_by_trace.json  traces_2025-06-29_00-23-37.json
testdata/: otelcol_file.yaml
tests/: generate_and_validate_traces.py  run_validation_test.py  test_collector_export.py  test_functions_only.py  test_module1_tracing.py  test_tracing.py  test_tracing_simple.py  validate_otlp_traces.py
