[project]
name = "agento-observability"
version = "0.1.0"
description = "A prototype for implementing comprehensive, SDK-independent observability in the Agento multi-module AI system."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [ { name = "Dazza Greenwood", email = "dazza@law.mit.edu" } ]
dependencies = [
    "opentelemetry-sdk~=1.25.0",
    "opentelemetry-exporter-otlp-proto-http",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]
